--- a/practice.html
+++ b/practice.html
@@ -200,7 +200,7 @@
   }
 
   function countVisitors(snapshot) {
-    let entries = 0, exits = 0, waiting = 0;
+    let entries = 0, exits = 0;
     for (let i = 1; i <= 14; i++) tableCounts[i] = { enter:0, exit:0, lastEnterTime:null };
 
     snapshot.forEach(doc => {
@@ -209,7 +209,6 @@
       if (!t || !ts) return;
       if (data.type === "enter") entries++;
       if (data.type === "exit") exits++;
-      if (data.type === "wait") waiting++;
 
       if (tableCounts[t]) {
         if (data.type === "enter") {
@@ -223,7 +222,6 @@
     document.getElementById("count").textContent = entries - exits;
     document.getElementById("entries").textContent = entries;
     document.getElementById("exits").textContent = exits;
-    document.getElementById("waitingCount").textContent = waiting;
 
     updateTableDisplays();
   }
